<resources>
    <string name="app_name">Next Hotel</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_setting">Setting</string>
    <string name="image_desc">image_desc</string>
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="languages">Languages</string>
    <string name="check_internet">Oooops, Please Check Your Internet Connection</string>
    <string name="rateDetail">%s rate</string>
    <string name="reviewsDetail">from %s reviews</string>
    <string name="hotels">Hotels Star</string>
    <string name="submit">Submit</string>
    <string name="start_from">Start from </string>
    <string name="added_favorite">Added to Favorite</string>
    <string name="removed_favorite">Removed from Favorite</string>
    <string name="detail_hotel">Detail Hotel</string>
    <string name="empy_favorite">Ooops Your Favorite\'s Empty</string>
</resources>