<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:contentDescription="@string/image_desc"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameTextView"
                    style="@style/TextView.Detail.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:gravity="start"
                    tools:text="Jogja Hotel's" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/favoriteButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:background="@drawable/bg_black_rounded"
                    android:contentDescription="@string/image_desc"
                    android:src="@drawable/ic_favorite_border" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/starTextView"
                    style="@style/TextView.Detail.Price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="13dp"
                    android:text="@string/hotels" />

                <RatingBar
                    android:id="@+id/hotelStars"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:numStars="5"
                    android:progressBackgroundTint="#808080"
                    android:progressTint="#FFC54D" />
            </LinearLayout>

            <TextView
                android:id="@+id/cityTextView"
                style="@style/TextView.Detail.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                tools:text="Sleman, Jogjakarta" />

            <TextView
                android:id="@+id/rateTextView"
                style="@style/TextView.Detail.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:drawablePadding="5dp"
                android:text="@string/rateDetail" />

            <TextView
                android:id="@+id/reviewTextView"
                style="@style/TextView.Detail.Subtitle.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:drawablePadding="5dp"
                android:text="@string/reviewsDetail" />

            <TextView
                android:id="@+id/priceTextView"
                style="@style/TextView.Detail.Price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                tools:text="Rp. 100.000" />

            <TextView
                android:id="@+id/descTextView"
                style="@style/TextView.Detail.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:maxLines="20"
                tools:text="@tools:sample/lorem/random" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>